--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"ahooks": "^3.7.8",
 		"axios": "^1.6.2",
 		"postcss-preset-env": "^9.3.0",
 		"react": "^18.2.0",
