--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"postcss-preset-env": "^9.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.19.0"
+		"react-router-dom": "^6.19.0",
+		"tailwind-merge": "^2.0.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^18.4.2",
